# AlimerGameEngine

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmake_android_armeabi-v7a.bat  cmake_emscripten.bat  make_vs2017_win64.bat
CMake/Modules/: Alimer.cmake  AlimerMacros.cmake
CMake/Toolchains/: emscripten.toolchain.cmake
Source/: CMakeLists.txt
Source/Alimer/: CMakeLists.txt
Source/Alimer/include/: Logger.h  Platform.h  Prerequisites.h  Types.h  Version.h  Version.in.h
Source/Alimer/include/Audio/: Audio.h
Source/Alimer/include/Core/: RefCounted.h  RefPtr.h  Stopwatch.h  Thread.h  TimeSpan.h  WeakPtr.h  Window.h  WindowHandle.h
Source/Alimer/include/Engine/: Application.h  Engine.h  EngineSettings.h  Main.h  Time.h
Source/Alimer/include/Graphics/: CommandBuffer.h  CommandEncoder.h  Framebuffer.h  GraphicsDevice.h  GraphicsResource.h  PhysicalDevice.h  RenderPassCommandEncoder.h  Shader.h  SwapChain.h  Texture.h  Types.h
Source/Alimer/include/IO/: FileStream.h  FileSystem.h  Stream.h
Source/Alimer/include/Math/: Color.h  Colors.h  Math.h  Rect.h  Vector2.h
Source/Alimer/include/Utils/: CommandLine.h  StringUtils.h
Source/Alimer/src/: Logger.cpp  Platform.cpp
Source/Alimer/src/Audio/: Audio.cpp
Source/Alimer/src/Audio/XAudio2/: XAudio27.cpp  XAudio27.h  XAudio2Audio.cpp  XAudio2Audio.h  XAudio2Prerequisites.h
Source/Alimer/src/Core/: RefCounted.cpp  Stopwatch.cpp  Thread.cpp  TimeSpan.cpp  Window.cpp  WindowImpl.h
Source/Alimer/src/Core/Android/: AndroidWindow.cpp  AndroidWindow.h
Source/Alimer/src/Core/HTML5/: WebWindow.cpp  WebWindow.h
Source/Alimer/src/Core/Windows/: WindowsHeaders.h  WindowsWindow.cpp  WindowsWindow.h
Source/Alimer/src/Engine/: Application.cpp  Engine.cpp  Time.cpp
Source/Alimer/src/Engine/Android/: AndroidApplication.cpp
Source/Alimer/src/Engine/HTML5/: WebApplication.cpp
Source/Alimer/src/Engine/Windows/: WindowsApplication.cpp
Source/Alimer/src/Graphics/: CommandBuffer.cpp  Framebuffer.cpp  GraphicsDevice.cpp  GraphicsResource.cpp  PhysicalDevice.cpp  Shader.cpp  SwapChain.cpp  Texture.cpp
Source/Alimer/src/Graphics/Direct3D12/: Direct3D12CommandAllocatorPool.cpp  Direct3D12CommandAllocatorPool.h  Direct3D12CommandBuffer.cpp  Direct3D12CommandBuffer.h  Direct3D12CommandQueue.cpp  Direct3D12CommandQueue.h  Direct3D12Device.cpp  Direct3D12Device.h  Direct3D12Framebuffer.cpp  Direct3D12Framebuffer.h  Direct3D12PhysicalDevice.cpp  Direct3D12PhysicalDevice.h  Direct3D12Prerequisites.h  Direct3D12Shader.cpp  Direct3D12Shader.h  Direct3D12SwapChain.cpp  Direct3D12SwapChain.h  Direct3D12Texture.cpp  Direct3D12Texture.h
Source/Alimer/src/IO/: FileStream.cpp  FileSystem.cpp  Stream.cpp
Source/Alimer/src/Math/: Color.cpp  Math.cpp  Rect.cpp  Vector2.cpp
Source/Alimer/src/Utils/: CommandLine.cpp  StringUtils.cpp
Source/Samples/: CMakeLists.txt
Source/Samples/01_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
Source/ShaderCompiler/: CMakeLists.txt
Source/ShaderCompiler/include/: ShaderCompiler.h  ShaderCompilerPrerequisites.h
Source/ShaderCompiler/src/: ShaderCompiler.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/AlimerPlayer/: AlimerPlayer.cpp  AlimerPlayer.h  CMakeLists.txt
